--- a/main.css
+++ b/main.css
@@ -64,10 +64,10 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
 }
 h1 {
-    font-size: 25px;
+    font-size: 1.4em;
 }
 h2 {
-    font-size: 22px;
+    font-size: 1.2em;
 }
 .background {
     background-image: url(images/bg-hero-mobile.svg);
@@ -77,7 +77,7 @@ h2 {
 /* Intro Section */
 
 .intro {
-    width: 90%;
+    width: 85%;
     margin: 0 auto;
     text-align: center;
     display: flex;
@@ -96,12 +96,18 @@ h2 {
     background-color: white;
     padding: 7.5px 7.5px;
     border-radius: 50px;
+    box-shadow: 0 0 20px 5px hsla(228, 0%, 95%, 1);
+}
+.intro__button:hover {
+    background-color: hsla(228, 0%, 90%, 1);
 }
 
 /* About Section */
 
 .about {
     width: 85%;
+    display: flex;
+    flex-direction: column;
     padding-bottom: 30px;
     margin: 50px auto 0 auto;
     text-align: center;
@@ -119,6 +125,10 @@ h2 {
     display: block;
     padding: 12.5px 0;
     margin: 30px auto 50px auto;
+    box-shadow: 0 5px 20px 5px hsla(228, 0%, 90%, 1);
+}
+.about__button:hover {
+    background-color: hsl(322, 81%, 50%);
 }
 
 /* Feature Section */
@@ -142,11 +152,14 @@ h2 {
 }
 .feature__img {
     width: 75%;
+    margin: 0 auto;
 }
 .feature__p {
     width: 85%;
+    color: hsl(208, 11%, 55%);
 }
 .feature__h {
+    width: 85%;
     margin: 40px auto 20px auto;
 }
 
@@ -169,66 +182,263 @@ h2 {
 }
 .call-to-action__button {
     font-size: 0.75em;
+    font-weight: bold;
     color: white;
     background-color: hsl(322, 100%, 66%);
     border-radius: 50px;
     padding: 15px 40px;
+    box-shadow: 0 5px 20px 5px hsla(228, 0%, 85%, 1);
+}
+.call-to-action__button:hover {
+    background-color: hsl(322, 81%, 50%);
 }
 
 /* General Footer */
 
 footer {
     background-color: hsl(192, 100%, 9%);
-    color: white;
+    color: hsl(0, 0%, 90%);
 }
 .copyright {
     font-size: 0.75em;
+}
+a.grid__item {
+    color: hsl(0, 0%, 90%);
+}
+a.grid__item:hover {
+    color: white;
 }
 
 /* Footer Grid */
 
 .grid {
-    width: 92.5%;
+    width: 90%;
     margin: 0 auto;
     padding: 150px 0 50px 0;
     display: grid;
-    grid-template-columns: 50px 1fr;
+    grid-template-columns: 40px 1fr;
     grid-template-rows: repeat(3, auto) 65px repeat(5, auto) 65px repeat(2, auto);
     grid-row-gap: 20px;
 }
-.grid__item--item1 {
+.grid__item--item1, .grid__item--item8, .grid__item--item9, .grid__item--item10, .grid__item--item11, .grid__item--item12, .grid__item--item13, .grid__item--item14, .grid__item--item15 {
     grid-column: 1/3;
+}
+.grid__item--item9, .grid__item--item10, .grid__item--item11, .grid__item--item12, .grid__item--item13, .grid__item--item14 {
+    width: 35%;
+}
+.grid__item--item1 {
     filter: brightness(0) invert(1); /* Changes logo to display as white */
+    width: 50%;
 }
 .grid__item--item2 {
-    grid-column: 1/2;
-    grid-row: 2/3;
+    grid-area: 2/1/3/2;
 }
 .grid__item--item3 {
-    grid-column: 1/2;
-    grid-row: 3/4;
+    grid-area: 3/1/4/2;
 }
 .grid__item--item4 {
-    grid-column: 1/2;
-    grid-row: 4/5;
+    grid-area: 4/1/5/2;
 }
 .grid__item--item5 {
-    grid-column: 2/3;
-    grid-row: 2/3;
+    grid-area: 2/2/3/3;
 }
 .grid__item--item8 {
     grid-row: 12/13;
     justify-self: center;
 }
-.grid__item--item8, .grid__item--item9, .grid__item--item10, .grid__item--item11, .grid__item--item12, .grid__item--item13, .grid__item--item14 {
-    grid-column: 1/3;
-}
 .grid__item--item15 {
-    grid-column: 1/3;
     justify-self: center;
 }
 .grid__item--item15 a {
     color: white;
     font-size: 40px;
     padding: 0 10px;
+}
+@media screen and (min-width: 550px) {
+
+    /* Intro Section */
+
+    .intro {
+        padding: 35px 0;
+    }
+
+    /* Call To Action Section */
+
+    .call-to-action {
+        width: 508px;
+    }
+
+    /* Grid Section */
+
+    .grid__item--item5 {
+        width: 70%;
+    }
+}
+@media screen and (min-width: 768px) {
+
+    body {
+        font-size: 22px;
+    }
+    .intro {
+        padding: 50px 0;
+    }
+}
+@media screen and (min-width: 1024px) {
+
+    .background {
+        background-image: url(images/bg-hero-desktop.svg);
+    }
+
+    /* Intro Section */
+
+    .intro__logo {
+        width: 20%;
+    }
+    .intro__button {
+        width: 20%;
+    }
+    .grid__item--item9, .grid__item--item10, .grid__item--item11, .grid__item--item12, .grid__item--item13, .grid__item--item14 {
+        width: 75%;
+    }
+
+    /* About Section*/
+
+    .about {
+        flex-direction: row;
+        justify-content: space-between;
+        text-align: left;
+    }
+    .about-wrapper {
+        width: 40%;
+    }
+    .about__p {
+        font-size: 0.8em;
+    }
+    .about__button {
+        text-align: center;
+        margin: 30px 0 50px 0;
+    }
+    .about__image {
+        width: 50%;
+    }
+
+    /* Feature Section */
+
+    .feature {
+        flex-direction: row-reverse;
+        align-items: center;
+    }
+    .feature--reverse {
+        flex-direction: row;
+    }
+    .feature-text-wrapper {
+        width: 60%;
+    }
+    .feature__h, .feature__p {
+        text-align: left;
+    }
+    .feature__h {
+        margin: 0 auto 20px auto;
+    }
+    .feature__p {
+        font-size: 0.8em;
+    }
+    .feature__img {
+        width: 30%;
+    }
+
+    /* Call To Action Section */
+
+    .call-to-action {
+        width: 650px;
+    }
+    .call-to-action__h {
+        font-size: 1.3em;
+    }
+
+    /* Footer Grid */
+
+    .grid {
+        width: 85%;
+        grid-template-columns: 40px 40% repeat(3, 1fr);
+        grid-template-rows: repeat(6, auto);
+        font-size: 0.75em;
+    }
+    .grid__item--item12, .grid__item--item13, .grid__item--item14 {
+        grid-column: auto;
+    }
+    .grid__item--item1 {
+        grid-area: 1/1/2/6;
+    }
+    .grid__item--item2 {
+        grid-area: 2/1/4/2;
+    }
+    .grid__item--item3 {
+        grid-area: 4/1/5/2;
+    }
+    .grid__item--item4 {
+        grid-area: 5/1/6/2;
+    }
+    .grid__item--item5 {
+        grid-area: 2/2/4/3;
+        padding-right: 100px;
+    }
+    .grid__item--item6 {
+        grid-area: 4/2/5/3;
+    }
+    .grid__item--item7 {
+        grid-area: 5/2/6/3;
+    }
+    .grid__item--item8 {
+        grid-area: 6/5/7/6;
+        justify-self: start;
+    }
+    .grid__item--item9 {
+        grid-area: 2/3/3/4;
+    }
+    .grid__item--item10 {
+        grid-area: 3/3/4/4;
+    }
+    .grid__item--item11 {
+        grid-area: 4/3/5/4;
+    }
+    .grid__item--item15 {
+        grid-area: 2/5/6/6;
+        justify-self: start;
+        align-self: start;
+    }
+    .grid__item--item15 a {
+        font-size: 25px;
+        padding: 0;
+    }
+}
+@media screen and (min-width: 1440px) {
+
+    /* About Section */
+
+    .about__h {
+        width: 90%;
+        font-size: 1.6em;
+    }
+    .about__button {
+        width: 65%;
+    }
+
+    /* Call To Action Section */
+
+    .call-to-action {
+        padding: 70px 0;
+    }
+    .call-to-action__h {
+        margin-bottom: 50px;
+    }
+    .call-to-action__button {
+        padding: 20px 60px;
+    }
+
+    /* Footer Grid */
+
+    .grid__item--item9, .grid__item--item10, .grid__item--item11, .grid__item--item12, .grid__item--item13, .grid__item--item14 {
+        width: 50%;
+    }
 }
